--- a/HomeLedApp/Strings/AppResources.resx
+++ b/HomeLedApp/Strings/AppResources.resx
@@ -145,10 +145,10 @@
     <value>Set and send Mode</value>
   </data>
   <data name="HorizontalOffset" xml:space="preserve">
-    <value>Wavelength reduction</value>
+    <value>Sin Size</value>
   </data>
   <data name="HorizontalOffset_Info" xml:space="preserve">
-    <value>Extends the sine wave to the width. Why don't you play around with this parameter a bit?</value>
+    <value>The number of leds one sin-wave is complete.</value>
   </data>
   <data name="Hue" xml:space="preserve">
     <value>Hue</value>
@@ -271,10 +271,10 @@
     <value>VersionHistory</value>
   </data>
   <data name="VerticalOffset" xml:space="preserve">
-    <value>Accelerate by omission</value>
+    <value>Multiplicator</value>
   </data>
   <data name="VerticalOffset_Info" xml:space="preserve">
-    <value>Raises the sine wave. Why don't you play around with this parameter a little?</value>
+    <value>Adds effects. Why don't you play around with this parameter a little? (Set it half to the sin size makes some blink effects)</value>
   </data>
   <data name="Width" xml:space="preserve">
     <value>Width</value>
